[gd_scene load_steps=8 format=3 uid="uid://bw5421u0o3x2o"]

[ext_resource type="Script" path="res://scripts/bosses/boss.gd" id="1_tmepv"]
[ext_resource type="Script" path="res://scripts/warning_system.gd" id="2_4w5hx"]

[sub_resource type="Animation" id="Animation_m34ba"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5vhna"]
resource_name = "charge"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.366667, 0.5),
"transitions": PackedFloat32Array(5, 1, 1, 6.06285),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.266667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"charge"
}, {
"args": [],
"method": &"crash"
}, {
"args": [],
"method": &"charge"
}, {
"args": [],
"method": &"positionToPos"
}]
}

[sub_resource type="Animation" id="Animation_xlmj0"]
resource_name = "jump"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.566667, 0.8),
"transitions": PackedFloat32Array(1, 1, 0.2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"s_jump"
}, {
"args": [],
"method": &"crash"
}, {
"args": [],
"method": &"positionToPos"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 0.866667, 0.9, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"jump"
}, {
"args": [],
"method": &"jump"
}, {
"args": [],
"method": &"spread"
}, {
"args": [],
"method": &"spread"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rh0qe"]
_data = {
"RESET": SubResource("Animation_m34ba"),
"charge": SubResource("Animation_5vhna"),
"jump": SubResource("Animation_xlmj0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckd5k"]
size = Vector2(14, 11)

[node name="boss" type="Node2D"]
script = ExtResource("1_tmepv")

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rh0qe")
}

[node name="WarningSystem" type="Node2D" parent="."]
script = ExtResource("2_4w5hx")

[node name="ChargeParts" type="CPUParticles2D" parent="."]
emitting = false
amount = 54
lifetime = 0.1
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2(0, 0)
spread = 33.6
gravity = Vector2(0, 0)
scale_amount_min = 8.0
scale_amount_max = 8.0
color = Color(0, 0, 0, 1)

[node name="BashParts" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 300)
initial_velocity_min = 300.0
initial_velocity_max = 600.0
scale_amount_min = 8.0
scale_amount_max = 8.0
color = Color(0, 0, 0, 1)

[node name="body" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 8
collision_mask = 8

[node name="Hurtbox" type="CollisionShape2D" parent="body"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_ckd5k")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="body" to="." method="_on_body_area_entered"]
